--- a/src/App.css
+++ b/src/App.css
@@ -13,19 +13,34 @@
   position: absolute;
 }
 
+svg {
+  width: 100%;
+}
+
 nav {
   color: white;
   width: 100%;
   height: fit-content;
-  background-color: red;
+/*   padding: 10px; */
 }
 
-nav, .navBtns, .App {
+nav, .navBtns, .App, .homepageContainer {
   display: flex;
 }
 
 .navBtns {
+  align-items: center;
   width: 20%;
-  justify-content: space-between;
-  background-color: bisque;
+  justify-content: space-around;
+}
+
+.homepageContainer {
+  width: 100%;
+  height: 100%;
+  flex-direction: column;
+  padding: 15px;
+}
+
+p, h1 {
+  color: white;
 }
