--- a/src/App.css
+++ b/src/App.css
@@ -8,23 +8,22 @@
   text-align: center;
   color: black;
   background-color: #181f2a;
-  width: 100%;
   height: 100%;
-  position: absolute;
-}
-
-svg {
-  width: 100%;
 }
 
 nav {
   color: white;
-  width: 100%;
   height: fit-content;
-/*   padding: 10px; */
 }
 
-nav, .navBtns, .App, .homepageContainer {
+nav,
+.info,
+.infoContainer,
+.navBtns,
+.App,
+.homepageContainer,
+.row,
+.description {
   display: flex;
 }
 
@@ -35,12 +34,54 @@ nav, .navBtns, .App, .homepageContainer {
 }
 
 .homepageContainer {
-  width: 100%;
   height: 100%;
   flex-direction: column;
   padding: 15px;
 }
 
-p, h1 {
+p,
+h1,
+h2 {
   color: white;
+}
+
+.info,
+.infoContainer,
+.row,
+.description {
+  justify-content: center;
+}
+
+.infoContainer {
+  margin-top: 5%;
+  width: fit-content;
+  flex-wrap: wrap;
+}
+
+.info {
+  flex-direction: column;
+  align-items: center;
+  width: 600px;
+}
+
+.row {
+  text-align: center;
+  flex-direction: row;
+}
+
+.description {
+  height: 100%;
+  align-items: center;
+  gap: 5%;
+  margin-top: 5%;
+}
+
+.infoContainer,
+.description,
+.homepageContainer, .App, #logo, nav {
+  width: 100%;
+}
+
+.description2 {
+  text-align: start;
 }
