--- a/src/App.css
+++ b/src/App.css
@@ -38,7 +38,7 @@ nav,
 .homepageContainer {
   height: 100%;
   flex-direction: column;
-  padding: 15px;
+  padding: 30px;
 }
 
 p,
@@ -63,13 +63,17 @@ h2 {
 .info {
   flex-direction: column;
   align-items: center;
-  width: 600px;
+  width: 350px;
+  padding: 10px;
 }
 
 .row {
   text-align: center;
   flex-direction: row;
   flex-wrap: wrap;
+  margin-bottom: 10px;
+  padding: 40px;
+  gap: 100px;
 }
 
 .description {
@@ -102,6 +106,7 @@ nav {
   box-shadow: rgba(0, 0, 0, 0.1) 0px 20px 25px -5px, rgba(0, 0, 0, 0.04) 0px 10px 10px -5px;
   flex-direction: column;
   padding: 30px;
+  position: relative;
 }
 
 .testimonials {
@@ -121,3 +126,25 @@ nav {
   border-radius: 100%;
   margin-right: 10px;
 }
+
+
+#quotes {
+  width: fit-content;
+  height: fit-content;
+  position: relative;
+  /* top: 0px;
+  bottom: 100px;
+  left: 135px; */
+}
+/* .quotesBackground {
+  position: absolute;
+  z-index: -1;
+  top: 0;
+  left: 0;
+} */
+
+/* .with-background {
+  background: url("images/bg-quotes.png") no-repeat left top;
+  background-size: contain; /* Adjust this as needed */
+  /* padding-left: 80px; /* Adjust this to control the distance from the left edge */
+/* }  */
